update mapper and model class fields for password abuse detection
