# src/main/java/com/yahoo/identity/services/account/AccountUpdate.java
@@ -20,7 +20,7 @@ public interface AccountUpdate {
     AccountUpdate setDescription(@Nonnull String description);
 
     @Nonnull
-    AccountUpdate setBlockUntil(@Nonnull long blockUntil);
+    AccountUpdate setBlockUntil(@Nonnull Instant blockUntil);
 
     @Nonnull
     AccountUpdate setNthTrial(@Nonnull int nthTrial);
